# mcp-guardian

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/guardian-mcp/: SKILL.md
.claude/skills/guardian-mcp/references/: tool-protocol.md
.github/workflows/: ci.yml
guardian/: __init__.py  approvals.py  backups.py  bash_classifier.py  budget.py  circuit.py  diffing.py  dispatch.py  exec_bash.py  exec_edit.py  exec_io.py  file_version.py  installer.py  intercept.py  knowledge.py  persist.py  policy_loader.py  risk.py  roots.py  security.py  sensitive.py  server.py  settings_template.json  signature.py  state.py
guardian/handlers/: edit_file.py  glob_grep.py  read_file.py  run_bash.py  search_backend.py  write_file.py
guardian/skills/guardian-mcp/: SKILL.md
scripts/: install.sh
tests/: conftest.py  pytest_stress.ini  run_stress.sh  test_approval_flow.py  test_bash_classifier.py  test_bash_validator.py  test_budget.py  test_circuit_breaker.py  test_concurrency.py  test_dispatch.py  test_edit_file.py  test_file_version.py  test_guardian.py  test_installer_roots.py  test_intercept_modes.py  test_knowledge.py  test_mcp_metadata.py  test_mcp_stdio_integration.py  test_policy_loader.py  test_roots.py  test_run_bash_policy.py  test_search_backend.py  test_sensitive_paths.py  test_signature.py  test_stress_v3.py  test_write_file_safety.py
