[project]
name = "mcp-guardian"
version = "1.0.0"
description = "MCP middleware that hardens Claude Code tools for third-party models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-timeout>=2.0",
    "hypothesis>=6.0",
]

[project.scripts]
guardian-mcp = "guardian.server:main"
guardian-install = "guardian.installer:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "timeout: per-test timeout when pytest-timeout is installed",
    "stress: pressure tests that may take longer than normal",
    "benchmark: performance baseline tests that are not strict pass/fail checks",
]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["guardian"]
artifacts = ["guardian/skills/**/*.md"]

[tool.hatch.build.targets.sdist]
include = ["guardian", "skills", "scripts", "tests", "README.md", "LICENSE", "pyproject.toml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
